--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project12</title>
-    <link rel="stylesheet" href="./main.css">
-</head>
-<body>
-    <h1 class="heading">project12</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>project11</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    />
+  </head>
+
+  <body>
+    <div class="container">
+      <form action="/send" method="">
+        <label
+          >username
+          <input type="text" name="username" value="" />
+        </label>
+        <label for="email">
+          email
+          <input id="email" type="email" name="email" placeholder="email" />
+        </label>
+        <input type="password" name="password" disabled />
+        <input type="color" />
+        <input type="range" min="0" max="100" step="50" />
+        <input type="time" />
+        <input type="date" />
+        <input type="month" />
+        <input type="search" />
+        <input type="url" />
+        <input type="datetime-local" />
+        <input type="number" />
+        <input type="tel" />
+        <input type="week" />
+        <textarea
+          name="comments"
+          cols="30"
+          rows="10"
+          placeholder="comments"
+        ></textarea>
+        <hr />
+
+        <input type="radio" name="weekend" value="fri" checked />friday
+        <input type="radio" name="weekend" value="sat" />saturday
+        <input type="radio" name="weekend" value="sun" />sunday
+        <hr />
+        <input type="checkbox" value="fri" />friday
+        <input type="checkbox" value="sat" checked />saturday
+        <input type="checkbox" value="sun" />sunday
+        <hr />
+        <select name="fruits">
+          <option value="apple">apple</option>
+          <option value="kiwi" selected>kiwi</option>
+          <option value="berry">berry</option>
+        </select>
+
+        <input type="submit" value="send" />
+      </form>
+    </div>
+  </body>
 </html>
