--- a/index.html
+++ b/index.html
@@ -6,133 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>project12</title>
     <link rel="stylesheet" href="./main.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1 class="heading">project12</h1>
     <div class="container">
-      <div class="row">
-        <div class="column">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-          <img src="https://picsum.photos/id/1050/1000/600" alt="photo" />
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
-            accusantium, iste amet optio velit ipsum, deleniti recusandae
-            voluptate quaerat sunt, incidunt voluptatibus perferendis fuga alias
-            sit quod quos unde? Consequuntur laudantium necessitatibus, et eius
-            repudiandae earum. Dolores tempora soluta rerum alias, quasi eos
-            velit dolor amet molestiae nemo ducimus at repudiandae aliquid enim
-            ut excepturi odit minima repellat perferendis quidem asperiores sed
-            quod. Necessitatibus nulla autem est modi, natus quam nesciunt
-            eaque, rerum laudantium voluptates, tempora mollitia aut beatae
-            dolores ullam alias recusandae! Sapiente eum, veritatis voluptatibus
-            voluptates, officiis voluptas suscipit eius possimus delectus
-            facilis, optio architecto sit doloremque dolores temporibus quod
-            soluta iste minima vero unde nulla dolore aspernatur. Sequi
-            expedita, corrupti minima cupiditate nostrum ab animi amet porro
-            voluptates repellendus nulla vitae dolorem corporis laborum magnam
-            ad sapiente? At eligendi nisi, incidunt a ullam aliquid porro
-            officia vitae voluptates dolorum. Reiciendis ex assumenda
-            aspernatur, quod maxime magnam dolore laboriosam minima praesentium
-            aut facere, sit neque consectetur in modi facilis dignissimos
-            cupiditate eveniet atque ad rem voluptatibus quis blanditiis
-            deleniti. Quisquam nam fugiat qui architecto! Quasi, fugit
-            dignissimos? Voluptatem, vitae doloremque. Suscipit quas vitae nemo
-            voluptas aliquid velit excepturi repudiandae. Inventore iste nulla
-            id asperiores, maxime numquam sapiente dignissimos!
-          </p>
-        </div>
-        <div class="column">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-          <img src="https://picsum.photos/id/1057/1000/600" alt="photo" />
-          <p>
-            Ab harum quo facilis necessitatibus? Quam, magnam enim nesciunt
-            error soluta delectus, ad suscipit dolores doloremque dolor animi
-            quos provident expedita? Nesciunt, dolorum eum? Ratione rerum
-            excepturi voluptatibus omnis id in quibusdam, totam reprehenderit
-            iste, recusandae cupiditate dignissimos non ipsam odio adipisci,
-            pariatur tempora deserunt quas magnam voluptatem. Ullam ratione
-            assumenda ex nesciunt, earum repudiandae sunt accusamus libero
-            consequuntur magnam placeat repellendus non cum culpa ut expedita
-            est praesentium, exercitationem temporibus. Quidem perspiciatis et
-            quaerat. Suscipit corrupti blanditiis error consequuntur fugit
-            delectus corporis in dolore quis alias, adipisci assumenda eaque
-            itaque ipsa. Maiores iusto expedita alias odio explicabo commodi,
-            enim tempora! Libero dolore necessitatibus, aliquid distinctio
-            magnam voluptate voluptatibus harum placeat aliquam quo excepturi
-            assumenda optio praesentium exercitationem sint obcaecati? Iusto ea
-            quas error eius explicabo doloremque, odit sequi. Quae eligendi
-            minima quos magnam vitae est sunt nihil quo dignissimos excepturi
-            nesciunt suscipit quibusdam doloremque quaerat blanditiis veritatis
-            minus harum quasi rem repellendus ipsa molestiae, autem saepe
-            adipisci. Excepturi molestiae exercitationem a ab eaque soluta,
-            deleniti quod nihil reiciendis est eveniet repudiandae velit
-            mollitia molestias natus modi harum blanditiis sint voluptatum
-            commodi dicta eum quia! Quam adipisci quis pariatur obcaecati,
-            tenetur dolorem veniam iure in accusamus similique distinctio sunt
-            laudantium.
-          </p>
-        </div>
-        <div class="column">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-          <img src="https://picsum.photos/id/1059/1000/600" alt="photo" />
-          <p>
-            Placeat quod est recusandae repellendus? Nisi quis dicta cum illum
-            nam molestias minima, quisquam debitis eum aperiam consectetur, ex,
-            ad cumque magnam porro. Cumque non, mollitia ipsum nobis modi
-            temporibus iusto odit sint omnis? Ducimus iusto dolorem magnam sed
-            blanditiis earum numquam pariatur necessitatibus similique fuga
-            adipisci dolor suscipit, at enim temporibus nihil labore qui
-            architecto. Magnam, quibusdam maiores accusantium praesentium alias
-            corrupti saepe labore blanditiis et asperiores pariatur quisquam
-            animi nostrum, inventore dolor sit laboriosam qui. Nobis hic tenetur
-            minus fugiat doloribus est, maxime quos quam expedita aut
-            dignissimos laboriosam nostrum illum ad! Magnam, iusto? Delectus eos
-            illo, voluptatum pariatur cum ipsam dignissimos? Nihil totam,
-            laboriosam saepe voluptate nulla nam? Natus sed sunt aut amet
-            recusandae adipisci a! Nulla, quidem officia ipsam quaerat rem
-            libero dolore maiores laborum, sit eveniet iure commodi debitis ipsa
-            minima. Eius hic minima ex, eum debitis libero ipsam. Nostrum quasi
-            sit laboriosam earum, cupiditate facere architecto commodi quia sed
-            quisquam dolorem quaerat assumenda harum reiciendis molestias vel
-            veniam nam, praesentium animi, placeat accusantium beatae doloribus?
-            Voluptatibus obcaecati velit ea ut nihil quasi adipisci corrupti,
-            iusto totam quos eum distinctio molestias praesentium voluptatem
-            aspernatur maxime sunt vel perspiciatis architecto ipsam officia
-            amet ullam quia? Iusto.
-          </p>
-        </div>
-        <div class="column">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-          <img src="https://picsum.photos/id/1052/1000/600" alt="photo" />
-          <p>
-            Aliquam, totam quia! Aspernatur eligendi nobis fugiat laboriosam
-            quas cumque aliquam voluptatibus magnam suscipit quae, rerum
-            repellat at illo, totam dignissimos alias inventore ea, quibusdam
-            perferendis sunt animi? Ipsum animi aperiam modi tempore! Illum
-            nobis laudantium quia libero cumque fugit quis deserunt voluptatum,
-            labore, aliquam accusantium explicabo quibusdam similique ratione
-            tenetur velit voluptas. Ad vitae dolor beatae, vel voluptas sint
-            nostrum aliquam enim? Quo, ab deserunt. Delectus quo ipsam quasi
-            quis atque? Dolorem delectus necessitatibus optio deserunt at fuga
-            fugiat cum dolores consequatur omnis odit, tenetur velit tempora
-            facilis. Reprehenderit omnis ullam architecto officia delectus
-            consequatur optio inventore eaque molestias laudantium rem hic
-            beatae, error aliquam quibusdam labore eos, culpa ad. Nulla dolorum
-            enim provident deserunt iste dolor aspernatur, laudantium iusto
-            natus accusamus temporibus ab laboriosam doloribus illum itaque
-            cumque. Quaerat alias et facilis sint quibusdam minima hic quisquam,
-            similique iste deserunt deleniti neque aperiam dolorum dolores
-            vitae? Porro sit nesciunt praesentium, quasi libero dolorem!
-            Aspernatur, natus ipsum? A, incidunt! Atque inventore culpa sed
-            porro voluptatem aperiam itaque esse omnis excepturi deleniti ea,
-            delectus necessitatibus. Facere fugit quas libero cupiditate
-            praesentium placeat dolore. Labore, dolores at sit provident numquam
-            delectus alias rem eligendi in sint neque perferendis nostrum maxime
-            magni.
-          </p>
-        </div>
-      </div>
+      <section>
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+      </section>
     </div>
   </body>
 </html>
