--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
   <body>
     <div class="container">
       <section>
+        <img src="https://picsum.photos/id/1051/200" alt="" class="box" />
+        <img src="https://picsum.photos/id/1052/200" alt="" class="box" />
+        <img src="https://picsum.photos/id/1053/200" alt="" class="box" />
+        <img src="https://picsum.photos/id/1054/200" alt="" class="box" />
+        <img src="https://picsum.photos/id/1055/200" alt="" class="box" />
+        <img src="https://picsum.photos/id/1056/200" alt="" class="box" />
+        <img src="https://picsum.photos/id/1057/200" alt="" class="box" />
+        <img src="https://picsum.photos/id/1058/200" alt="" class="box" />
+        <img src="https://picsum.photos/id/1059/200" alt="" class="box" />
+      </section>
+      <!-- <section>
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
-      </section>
+      </section> -->
     </div>
   </body>
 </html>
