intro to javascript

--- a/index.html
+++ b/index.html
@@ -4,31 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./main.js" defer or async></script>
     <title>project12</title>
+    
     <link rel="stylesheet" href="./main.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <script>
+      //i would put my internal javascript code here /inline styling
+    </script>
+    
   </head>
   <body>
-    <div class="container">
-      <section>
-        <img src="https://picsum.photos/id/1051/200" alt="" class="box" />
-        <img src="https://picsum.photos/id/1052/200" alt="" class="box" />
-        <img src="https://picsum.photos/id/1053/200" alt="" class="box" />
-        <img src="https://picsum.photos/id/1054/200" alt="" class="box" />
-        <img src="https://picsum.photos/id/1055/200" alt="" class="box" />
-        <img src="https://picsum.photos/id/1056/200" alt="" class="box" />
-        <img src="https://picsum.photos/id/1057/200" alt="" class="box" />
-        <img src="https://picsum.photos/id/1058/200" alt="" class="box" />
-        <img src="https://picsum.photos/id/1059/200" alt="" class="box" />
-      </section>
-      <!-- <section>
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-      </section> -->
-    </div>
+    <nav class="menu"></nav>
+    <button>click me to hide menu</button>
+    <!-- <script src="./main.js"></script> -->
   </body>
 </html>
